# ChangeLog for sci-biology/ncbi-tools
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/ncbi-tools/ChangeLog,v 1.66 2009/03/24 21:07:55 ribosome Exp $

  24 Mar 2009; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Giving up maintainership of this package.

  27 Jun 2008; Ulrich Mueller <ulm@gentoo.org> ncbi-tools-20060507.ebuild,
  ncbi-tools-20061015-r1.ebuild, ncbi-tools-20070826.ebuild,
  ncbi-tools-20080302.ebuild:
  Change dependency from virtual/motif to x11-libs/openmotif, bug 224749.

  12 May 2008; Markus Rothe <corsair@gentoo.org> ncbi-tools-20080302.ebuild:
  Stable on ppc64

  12 May 2008; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  Move pmake to DEPEND fixing bug #221441

  22 Apr 2008; Olivier Fisette <ribosome@gentoo.org>
  -ncbi-tools-20050605.ebuild, ncbi-tools-20080302.ebuild:
  Pruned old version. Added 20080302 to x86 and amd64 (fixes bug #218233).

*ncbi-tools-20080302 (15 Apr 2008)

  15 Apr 2008; Jeff Gardner <je_fro@gentoo.org> +ncbi-tools-20080302.ebuild:
  Latest release from NCBI.

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>; Manifest:
  Fix manifest, connection dropped mid-commit.

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  ncbi-tools-20070826.ebuild:
  (#195251) Fix build with --as-needed by always linking against dynamic
  libraries (Till Korten).

  08 Apr 2008; Donnie Berkholz <dberkholz@gentoo.org>;
  ncbi-tools-20070826.ebuild:
  Respect CFLAGS and compiler on 64-bit systems. Apparently I'm the only
  person on amd64 who actually watches it build. =)

  31 Dec 2007; Jeff Gardner <je_fro@gentoo.org> ChangeLog:
  fixing my email address

  19 Oct 2007; Jeff Gardner <je_fro@gentoo.org> ncbi-tools-20070826.ebuild:
  Commenting out any reference to USE=mpi, which is currently broken (bug
  #196466).

  14 Oct 2007; Jeff Gardner <je_fro@gentoo.org> ncbi-tools-20070826.ebuild: